# astropathic-relay

./: .gitignore  README.md  index.html  package.json
.github/workflows/: build-and-tag.yaml  build-and-tag.yaml.disabled
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cmd.rs  main.rs
src/components/: Button.jsx  ConnectionForm.jsx  Header.jsx  OutputConsole.jsx  StatusIndicator.jsx  TypeWriter.jsx
src/styles/: Button.css  Form.css  RetroTheme.css  index.css
src/utils/: sshuttleConfig.js
